# notion_add_item_cli

./: Cargo.toml  Dockerfile  ReadMe.md
.devcontainer/: devcontainer.json
src/: main.rs
src-py/: README.md  main.py  pyproject.toml  requirements.txt
src-py/templates/: index.html  success.html
